--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <span class="discount-badge">-30%</span>
@@ -100,11 +100,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <div class="product-info">
@@ -120,11 +120,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <span class="discount-badge">-50%</span>
@@ -142,11 +142,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <span class="new-badge">New</span>
@@ -163,11 +163,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <div class="product-info">
@@ -183,11 +183,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <span class="new-badge">New</span>
@@ -204,11 +204,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <span class="discount-badge">-50%</span>
@@ -226,11 +226,11 @@
                             <button class="cart-btn">Add to cart</button>
                             <div class="action-icons">
                                 <img src="share.png" alt="share">
-                                <span>Share</span>
+                                <!-- <span>Share</span> -->
                                 <img src="compare.png" alt="compare">
-                                <span>Compare</span>
+                                <!-- <span>Compare</span> -->
                                 <img src="like.png" alt="like">
-                                <span>Like</span>
+                                <!-- <span>Like</span> -->
                             </div>
                         </div>
                         <span class="new-badge">New</span>
